Revert "Continued OSS migration"
This reverts commit 824f5f7e1c02aecb377d7a527a3bfb854dfffa53.

--- a/examples/integrations/llama_index.ipynb
+++ b/examples/integrations/llama_index.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "07/29/2023 11:42:24 AM [INFO]: integrations.2460073223.<module> (in 2460073223.py line 8) Logging is configured. Working directory: /Users/ctn/src/aitomatic/ssm/examples/integrations\n"
+      "07/29/2023 02:46:20 AM [INFO]: __main__.699846355.<module> (in 699846355.py line 9) Logging is configured. Working directory: /Users/ctn/src/aitomatic/ssm/examples/integrations\n"
      ]
     }
    ],
@@ -27,55 +27,68 @@
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path('../../').resolve()))\n",
     "\n",
-    "# Configure logging for some informative output\n",
-    "from openssm import logger\n",
+    "import logging\n",
+    "from openssm import Logs\n",
+    "logger = Logs.get_logger(name=__name__, log_level=logging.DEBUG)\n",
     "logger.info(\"Logging is configured. Working directory: %s\", Path.cwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate a LlamaIndexSSM\n",
     "from openssm import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM()"
+    "ssm = LlamaIndexSSM()\n",
+    "ssm.read_directory('../../docs/eos')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nThe machines are the EOS M 400-4 and the M290.'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load the index from storage\n",
-    "ssm.load('../tmp/storage/eos')"
+    "ssm.discuss(\"What are the machines?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nThe key differences between the two machines are the controls and indications on the monitor. The first machine has a touch-sensitive monitor with all the indications and buttons necessary for operation, while the second machine has buttons that are activated by touching the monitor, as well as status boxes and selector switches. Additionally, the second machine has a field that can be touched to open a data entry window with a keyboard.'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Persist the index\n",
-    "ssm.persist('../tmp/storage/eos')"
+    "ssm.discuss(\"What are the key differences between the two machines?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the docs for the first time\n",
-    "ssm.read_directory('../tmp/docs/eos')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -85,98 +98,35 @@
        "  'content': '\\nThe M400-4 has a higher nominal power of 4 x 400 W compared to the M290, which has a nominal power of 4 x 290 W. Additionally, the M400-4 has a higher exposure speed of 4 x ≤ 7000 mm/s compared to the M290, which has an exposure speed of 4 x ≤ 5000 mm/s. The M400-4 also has a higher repeatability, scanner position of < 11 μrad compared to the M290, which has a repeatability, scanner position of < 20 μrad. Finally, the M400-4 has a lower temperature dependent offset drift of < 20 μrad/K compared to the M290, which has a temperature dependent offset drift of < 30 μrad/K.'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Interact with the SSM\n",
     "ssm.discuss(\"Why should I use M400 over M290?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nThe M290 should be chosen over the M400 when a smaller building volume is needed (250 x 250 x 325 mm) and when a faster recoating speed is desired (40 - 500 mm/s). Additionally, the M290 has a lower nominal power (400 W) and a lower power in the building area (370 W) than the M400.'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssm.discuss(\"In the most business-friendly terms, when should I choose the M290 over the M400?\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.get_backends()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.get_backends()[0].index.storage_context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Backend(index=<llama_index.indices.vector_store.base.VectorStoreIndex object at 0x13ee27b20>, _query_engine=<llama_index.query_engine.retriever_query_engine.RetrieverQueryEngine object at 0x14094b010>)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.get_backends()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LlamaIndexSSM()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.get_backends()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
