Update `examples/integration/llama_index.ipynb` to use ylecun’s Towards Autonomouse Intelligence paper.

--- a/examples/integrations/llama_index.ipynb
+++ b/examples/integrations/llama_index.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "07/29/2023 02:46:20 AM [INFO]: __main__.699846355.<module> (in 699846355.py line 9) Logging is configured. Working directory: /Users/ctn/src/aitomatic/ssm/examples/integrations\n"
+      "07/29/2023 05:39:59 PM [INFO]: integrations.1223151261.<module> (in 1223151261.py line 8) Working directory: /Users/ctn/src/aitomatic/ssm/examples/integrations\n"
      ]
     }
    ],
@@ -27,106 +27,184 @@
     "from pathlib import Path\n",
     "sys.path.insert(0, str(Path('../../').resolve()))\n",
     "\n",
-    "import logging\n",
-    "from openssm import Logs\n",
-    "logger = Logs.get_logger(name=__name__, log_level=logging.DEBUG)\n",
-    "logger.info(\"Logging is configured. Working directory: %s\", Path.cwd())"
+    "# Configure logging for some informative output\n",
+    "from openssm import logger\n",
+    "logger.info(\"Working directory: %s\", Path.cwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate a LlamaIndexSSM\n",
+    "from openssm import LlamaIndexSSM\n",
+    "ssm = LlamaIndexSSM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the docs for the first time\n",
+    "ssm.read_directory('../tmp/docs/ylecun')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Persist the index\n",
+    "ssm.persist('../tmp/storage/ylecun')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the index from storage\n",
+    "ssm.load('../tmp/storage/ylecun')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nThe main point made by Yann LeCun is that an architecture and training paradigms can be used to construct autonomous intelligent agents that learn more like humans and animals, can reason and plan, and whose behavior is driven by intrinsic objectives.'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Interact with the SSM\n",
+    "ssm.discuss(\"What is the main point made by Yann LeCun?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nNo, Yann does not believe that scaling up LLMs can achieve AGI. He believes that current models are only capable of very limited forms of reasoning and that they are not suitable for continuous, high dimensional signals such as video. He also believes that pure reinforcement learning is extremely sample-inefficient and that reward is not enough to train a world model. He suggests that hierarchical representations with continuous relaxations of discrete problems may be necessary for AGI.'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.discuss(\"Does Yann think LLMs can achieve AGI?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nHe thinks that a lot of hard work needs to be done to instantiate the proposed architecture and turn it into a functional system. He questions whether a Hierarchical JEPA can be built and trained from videos, how to regularize the latent variable, how the actor can infer latent variable instantiations and optimal action sequences, how to instantiate multiple configurations of latent variables in Mode-2 planning/reasoning, the architecture of the various modules, the architecture and function of the short-term memory, and how it may be used to represent beliefs about the state of the world.'}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.discuss(\"What does he think is missing?\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nYann LeCun does not provide a specific timeline for when he believes we will achieve AGI. He does, however, suggest that the challenges of creating autonomous intelligent agents can be addressed with the architecture and training paradigms he proposes. He also suggests that the research in AI should be contextualized in order to make progress towards AGI.'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.discuss(\"When does he think we will achieve AGI?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'assistant',\n",
+       "  'content': '\\nYann thinks that we should build machines that can learn like humans and animals, so that they can understand the world and act in it. He suggests that we should give them a way to learn from their environment, so that they can learn without needing lots of expensive and dangerous trials. He also suggests that we should give them a way to reason and plan, so that they can make decisions and solve problems. Finally, he suggests that we should give them a way to represent things in a hierarchical way, so that they can understand things at different levels of complexity.'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.discuss(\"Explain to a smart 8-year-old what Yann thinks we should do to achieve AGI.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Backend(index=<llama_index.indices.vector_store.base.VectorStoreIndex object at 0x13fb0cbe0>, _query_engine=<llama_index.query_engine.retriever_query_engine.RetrieverQueryEngine object at 0x13fb0d030>)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssm.get_backends()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "from openssm import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM()\n",
-    "ssm.read_directory('../../docs/eos')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant',\n",
-       "  'content': '\\nThe machines are the EOS M 400-4 and the M290.'}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"What are the machines?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant',\n",
-       "  'content': '\\nThe key differences between the two machines are the controls and indications on the monitor. The first machine has a touch-sensitive monitor with all the indications and buttons necessary for operation, while the second machine has buttons that are activated by touching the monitor, as well as status boxes and selector switches. Additionally, the second machine has a field that can be touched to open a data entry window with a keyboard.'}]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"What are the key differences between the two machines?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant',\n",
-       "  'content': '\\nThe M400-4 has a higher nominal power of 4 x 400 W compared to the M290, which has a nominal power of 4 x 290 W. Additionally, the M400-4 has a higher exposure speed of 4 x ≤ 7000 mm/s compared to the M290, which has an exposure speed of 4 x ≤ 5000 mm/s. The M400-4 also has a higher repeatability, scanner position of < 11 μrad compared to the M290, which has a repeatability, scanner position of < 20 μrad. Finally, the M400-4 has a lower temperature dependent offset drift of < 20 μrad/K compared to the M290, which has a temperature dependent offset drift of < 30 μrad/K.'}]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"Why should I use M400 over M290?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'assistant',\n",
-       "  'content': '\\nThe M290 should be chosen over the M400 when a smaller building volume is needed (250 x 250 x 325 mm) and when a faster recoating speed is desired (40 - 500 mm/s). Additionally, the M290 has a lower nominal power (400 W) and a lower power in the building area (370 W) than the M400.'}]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"In the most business-friendly terms, when should I choose the M290 over the M400?\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
