LlamaIndex-integration usage guide and roadmap.

--- a/examples/integrations/llama_index.ipynb
+++ b/examples/integrations/llama_index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'role': 'assistant',\n",
-       "  'content': '\\nThe main point made by Yann LeCun is that an architecture and training paradigms can be used to construct autonomous intelligent agents that learn more like humans and animals, can reason and plan, and whose behavior is driven by intrinsic objectives.'}]"
+       "  'content': 'The main point made by Yann LeCun is that an architecture and training paradigms can be used to construct autonomous intelligent agents that learn more like humans and animals, can reason and plan, and whose behavior is driven by intrinsic objectives.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'role': 'assistant',\n",
-       "  'content': '\\nNo, Yann does not believe that scaling up LLMs can achieve AGI. He believes that current models are only capable of very limited forms of reasoning and that they are not suitable for continuous, high dimensional signals such as video. He also believes that pure reinforcement learning is extremely sample-inefficient and that reward is not enough to train a world model. He suggests that hierarchical representations with continuous relaxations of discrete problems may be necessary for AGI.'}]"
+       "  'content': 'Yann does not think that LLMs can achieve AGI. He believes that scaling is not enough and that reward is not enough. He believes that symbols are necessary for reasoning and that the type of reasoning proposed in the paper cannot encompass all forms of reasoning that humans and animals are capable of.'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'role': 'assistant',\n",
-       "  'content': '\\nHe thinks that a lot of hard work needs to be done to instantiate the proposed architecture and turn it into a functional system. He questions whether a Hierarchical JEPA can be built and trained from videos, how to regularize the latent variable, how the actor can infer latent variable instantiations and optimal action sequences, how to instantiate multiple configurations of latent variables in Mode-2 planning/reasoning, the architecture of the various modules, the architecture and function of the short-term memory, and how it may be used to represent beliefs about the state of the world.'}]"
+       "  'content': 'He thinks that a lot of hard work needs to be done to instantiate the proposed architecture and turn it into a functional system. He questions whether a Hierarchical JEPA can be built and trained from videos, how to regularize the latent variable, how the actor can infer latent variable instantiations and optimal action sequences, how to instantiate multiple configurations of latent variables in Mode-2 planning/reasoning, the architecture of the various modules, the architecture and function of the short-term memory, and how it may be used to represent beliefs about the state of the world.'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'role': 'assistant',\n",
-       "  'content': '\\nYann LeCun does not provide a specific timeline for when he believes we will achieve AGI. He does, however, suggest that the challenges of creating autonomous intelligent agents can be addressed with the architecture and training paradigms he proposes. He also suggests that the research in AI should be contextualized in order to make progress towards AGI.'}]"
+       "  'content': 'Yann LeCun does not provide a specific timeline for when he believes we will achieve AGI. He does, however, suggest that the challenges of creating autonomous intelligent agents can be addressed with the architecture and training paradigms he proposes. He also suggests that the research in AI should be contextualized in order to make progress towards AGI.'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,17 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'role': 'assistant',\n",
-       "  'content': '\\nYann thinks that we should build machines that can learn like humans and animals, so that they can understand the world and act in it. He suggests that we should give them a way to learn from their environment, so that they can learn without needing lots of expensive and dangerous trials. He also suggests that we should give them a way to reason and plan, so that they can make decisions and solve problems. Finally, he suggests that we should give them a way to represent things in a hierarchical way, so that they can understand things at different levels of complexity.'}]"
+       "  'content': 'Yann thinks that we should build machines that can learn like humans and animals, so that they can understand the world and act in it. He suggests that we should give them a way to learn from their environment, so that they can learn without needing lots of expensive and dangerous trials. He also suggests that we should give them a way to reason and plan, so that they can make decisions and solve problems. Finally, he suggests that we should give them a way to represent things in a hierarchical way, so that they can understand things at different levels of complexity.'}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Backend(index=<llama_index.indices.vector_store.base.VectorStoreIndex object at 0x13fb0cbe0>, _query_engine=<llama_index.query_engine.retriever_query_engine.RetrieverQueryEngine object at 0x13fb0d030>)"
+       "Backend(index=<llama_index.indices.vector_store.base.VectorStoreIndex object at 0x140845870>, _query_engine=<llama_index.query_engine.retriever_query_engine.RetrieverQueryEngine object at 0x140f9ba90>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,20 +198,6 @@
    "source": [
     "ssm.get_backends()[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
